Modified for styles

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container text-white text-center pt-4">
+    <div class="container text-white text-center pt-4 mt-5">
         <h4><strong>ராஜா ரோஜா திருமண இணையம்</strong></h4>
     </div>
     <div class="row text-center">
