--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,9 +1,7 @@
 <form action="" class="form-inline" autocomplete="off">
     <div class="container">
-        <fieldset class="scheduler-border card border-custom mt-5">
-            <legend class="header scheduler-border mb-5 text-center">
-                <h2>Personal details</h2>
-            </legend>
+        <fieldset class="border-custom card rounded mt-5">
+            <h2 class="text-center card-header text-white">Personal details</h2>
             <aside class="">
                 <input type="file" id="files" />
                 <img id="image" />
@@ -220,10 +218,8 @@
     </div>
 
     <div class="container">
-        <fieldset class="scheduler-border border-custom card mt-5">
-            <legend class="header scheduler-border mb-4 text-center">
-                <h2>Horoscope</h2>
-            </legend>
+        <fieldset class="border-custom card rounded mt-5">
+            <h2 class="text-center card-header text-white">Horoscope</h2>
             <div class="container row mt-5 mb-5">
                 <table class="form-group mx-auto">
                     <tbody>
@@ -284,10 +280,8 @@
     </div>
 
     <div class="container">
-        <fieldset class="scheduler-border border-custom card mt-5">       
-            <legend class="header scheduler-border mb-5 text-center">
-                <h2>Family details</h2>
-            </legend>
+        <fieldset class="border-custom card rounded mt-5">       
+            <h2 class="text-center card-header text-white">Family details</h2>
             <div class="container bg-">
 
                 <div class="container bg- col-11">
@@ -358,10 +352,8 @@
     </div>
 
     <div class="container mb-5">
-        <fieldset class="scheduler-border border-custom card mt-5">
-            <legend class="header scheduler-border mb-5 text-center">
-                <h2>Partner expectations</h2>
-            </legend>
+        <fieldset class="border-custom card rounded mt-5">
+            <h2 class="text-center card-header text-white">Partner expectations</h2>
             <div class="container">
                 
                 <div class="form-group">
@@ -459,7 +451,3 @@
         <button class="btn btn-lg cancel-btn offset-md-1 col-4" type="reset">Cancel</button>
     </div>
 </form>
-
-<script>
-
-</script>
