--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -67,3 +67,60 @@ input, select {
     color: white;
 }
 /* ====================================================================================== */
+label.myLabel input[type="file"] {
+    position:absolute;
+    top: -1000px;
+}
+
+/***** Example custom styling *****/
+.myLabel {
+    border: none;
+    border-radius: 4px;
+    padding: 2px 5px;
+    margin: 2px;
+    background-image: linear-gradient(to right, rgb(67, 180, 245), cyan, rgb(67, 180, 245) );
+    display: inline-block;
+}
+.myLabel:hover {
+    cursor: pointer;
+    background-image: linear-gradient(to right, rgb(2, 55, 228), rgb(67, 180, 245), rgb(2, 55, 228));
+}
+
+.myLabel :invalid + span {
+    color: #A44;
+}
+.myLabel :valid + span {
+    color: #4A4;
+}
+/* ======================================================================================== */
+@media screen and (max-height: 570px) {
+    .card img {
+        height: 100px;
+    }
+}
+
+@media screen and (min-height: 571px) and (max-height: 670px) {
+    .card img {
+        height: 110px;
+    }
+}
+@media screen and (min-height: 671px) and (max-height: 840px) {
+    .card img {
+        height: 100px;
+    }
+}
+@media screen and (min-height: 841px) and (max-height: 1025px) {
+    .card img {
+        height: 200px;
+    }
+}
+@media screen and (min-height: 1026px) and (max-height: 1400px) {
+    .card img {
+        height: 250px;
+    }
+}
+@media screen and (min-width:1025px) {
+    .card img {
+        height:300px;
+    }
+}
