Modified About, Footer and Register component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,7 +8,7 @@
             ஆண், பெண் ஜாதகங்களை திருமண பொருத்தங்களுக்காக எங்களுக்கு அனுப்பிய 48 மணி நேரத்திற்குள் பலன் அளிப்பேன்...
         </p>
 
-        <p>
+        <p class="text-right">
             <strong>
                 <code>
                     -ராஜசிம்மன், ஜோதிடர்
