--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,13 +1,14 @@
 <div class="container-fluid">
     <div class="mt-5 mb-5 col-10 mx-auto text-center card-columns rounded">
-        <div *ngFor="let img of imgUrls; index as i" class="card mt-5 mb-5 text-center">
-            <img class="card-img-top img-fluid" src={{img}} alt="Card image">
+        <div *ngFor="let profile of profiles; index as i" class="card mt-5 mb-5 text-center">
+            <!-- <img class="card-img-top img-fluid" src={{img}} alt="Card image"> -->
             <div class="card-body p-1">
-                <h4 class="text-center">name - <code>19</code></h4>
-                <h6 class="text-center">dob</h6>
-                <h6 class="text-center">star</h6>
+                <h5 class="text-center">{{ profile.name }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
+                <h6 class="text-center">DOB - <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
+                <h6 class="text-center">Star - <small *ngIf="profile.star; else elseNil">{{ profile.star}}</small></h6>
+                <ng-template #elseNil><small>Nil</small></ng-template>
             </div>
-            <div class="card-footer p-2 pr-3 text-right"><a routerLink="/profiledetail">View profile</a></div>
+            <div class="card-footer p-2 pr-3 text-right"><a [routerLink]="['/profiledetail', profile.id]">View profile</a></div>
         </div>
     </div>
 </div>
