--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,34 +39,34 @@
             <li class="nav-item"><a class="nav-link" data-target="#login-modal" data-toggle="modal">Login</a></li>
         </ul>
  
-        <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Login</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
+        <form novalidate [formGroup]="loginForm" autocomplete="off">
+            <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header text-white">
+                            <h5 class="modal-title">Login</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
                             <div class="form-group">
-                                <label for="id" class="col-form-label">Member Id</label>
-                                <input type="number" class="form-control">
+                                <label for="id" class="col-form-label">Member Id / Email Id</label>
+                                <input type="text" formControlName="id" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="col-form-label">Password</label>
-                                <input type="password" class="form-control">
+                                <input type="password" formControlName="password" class="form-control">
                             </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" routerLink="/profiles"  data-dismiss="modal" (click)="save()">Submit</button>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary" routerLink="/profiles" (click)='onSubmit()' data-dismiss="modal">Submit</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </form>
           
     </div>
 </nav>
