--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,3 +1,4 @@
+<app-filter></app-filter>
 <div class="container-fluid">
     <div class="mt-5 mb-5 col-10 mx-auto text-center card-columns rounded">
         <div *ngFor="let profile of profiles; index as i" class="card mt-5 mb-5 text-center">
